# universityTasks

./: .gitignore
bolgoff/NewspapeIt/: NewspapeIt.cbp  NewspapeIt.depend  NewspapeIt.h  NewspapeIt.layout  main.cpp
bolgoff/RPN/: RPN.py
otherProgramming/BigNumbers/: BigNumbers.cbp  BigNumbers.cscope_file_list  BigNumbers.depend  BigNumbers.h  BigNumbers.layout  main.cpp
otherProgramming/BigNumbersClion/: CMakeLists.txt  main.cpp
